--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-<h1>Hello, it’s me.</h1>
-<title>Thanks Chenxia!!!!!!</title>
+<h1>Gina Liu</h1>
+<title> Gina Liu </title>
 </html>
