--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
 <h1>Gina Liu</h1>
+<h1>"<a href="https://www.linkedin.com/pub/gina-liu/b2/998/a5">
+      
+          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Gina Liu's profile on LinkedIn">
+        
+    </a>"
+    </h1>
 <title> Gina Liu </title>
+
 </html>
